objects/vlocity_cmt__Stage__c.object
<CustomObject>
    <description>Vlocity system object used to stage JSON data being imported or exported via DataRaptor.</description>
    <fields>
        <fullName>vlocity_cmt__Config__c</fullName>
        <label>Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <defaultValue>&quot;Ready&quot;</defaultValue>
        <label>DRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Json__c</fullName>
        <label>Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity DataRaptor Staged Data</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataRaptor Staged Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>